fix bug which showed the toggle btn on overlay (z-index)

--- a/src/style.css
+++ b/src/style.css
@@ -248,7 +248,6 @@ header h1 {
   position: absolute;
   top: 17rem;
   right: -0.5rem;
-  z-index: 3;
 }
 
 /* * form modal */
